@@ -39,7 +39,7 @@ dist-gentoolkit-dev:
 dist-gentoolkit:
 	mkdir -p release/gentoolkit-$(VERSION)$(RELEASE_TAG)
 	rm -rf release/gentoolkit-$(VERSION)$(RELEASE_TAG)/
-	for x in eclean equery etcat euse qpkg gentoolkit revdep-rebuild glsa-check; do \
+	for x in eclean equery etcat euse qpkg gentoolkit revdep-rebuild glsa-check genpkgindex; do \
 		( cd src/$$x ; make distdir=release/gentoolkit-$(VERSION)$(RELEASE_TAG) dist ) \
 	done
 	cp Makefile AUTHORS README TODO COPYING NEWS ChangeLog release/gentoolkit-$(VERSION)$(RELEASE_TAG)/
@@ -65,7 +65,7 @@ install-gentoolkit:
 	install -m 0644 AUTHORS ChangeLog COPYING NEWS README TODO $(docdir)/
 	install -m 0644 src/99gentoolkit-env $(sysconfdir)/env.d/
 
-	for x in eclean equery etcat euse qpkg gentoolkit revdep-rebuild glsa-check ; do \
+	for x in eclean equery etcat euse qpkg gentoolkit revdep-rebuild glsa-check genpkgindex; do \
 		( cd src/$$x ; make DESTDIR=$(DESTDIR) install )  \
 	done
 
